[package]
name = "sfs"
version = "1.1.1"
edition = "2021"

[dependencies]
base64 = "0.13.0"
fernet = "0.2.0"
home = "0.5.4"
humansize = "2.1.0"
indicatif = "0.17.2"
rand = "0.8.5"
rpassword = "7.0.0"
rustyline = "10.0.0"
rustyline-derive = "0.7.0"
serde = "1.0.145"
serde_derive = "1.0.145"
sha2 = "0.10.6"
structure = "0.1.2"
termsize = "0.1.6"
toml = "0.5.9"
walkdir = "2.3.2"

[dependencies.xxhash-rust]
version = "0.8.6"
features = ["xxh3", "xxh64", "xxh32"]
